--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="content has-text-justified">
             <p>
               Directly exploring the predicted noise space using the total divergence, $\Delta \epsilon_k^n$, is insufficient for discovering breed-to-breed transformation directions. 
-    To address this, \texttt{UDT} addresses this by first decomposing this divergence, as illustrated in (a), to isolate the class-specific direction $\Delta\mathcal{T}_k^n$ from the more general parent-class attributes $\Delta\mathcal{P}_k^n$. 
+    To address this, UDT addresses this by first decomposing this divergence, as illustrated in (a), to isolate the class-specific direction $\Delta\mathcal{T}_k^n$ from the more general parent-class attributes $\Delta\mathcal{P}_k^n$. 
     The contrastive learning stage, shown in (b) and (c), then operates exclusively on the directions $\Delta\mathcal{T}_k^n$ . 
     This focused approach allows the framework to discover specific and consistent directions, such as $\boldsymbol{c}_1$ for ``Bullmastiff'' and $\boldsymbol{c}_K$ for ``Golden Retriever,'' which are then used to perform the final image translations.
             </p>
