--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Sungyong Park</a>,
               </span>
               <span class="author-block">
-                <a href="SIXTH AUTHOR PERSONAL LINK" target="_blank">Heewon Kim</a><sup>†</sup>
+                <a href="https://reality.ssu.ac.kr/members/faculty" target="_blank">Heewon Kim</a><sup>†</sup>
               </span>
             </div>
 
@@ -115,21 +115,21 @@
                   </a>
                 </span>
 
-                <!--
+                
                 <span class="link-block">
                   <a href="https://github.com/YOUR REPO HERE" target="_blank" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon"><i class="fab fa-github"></i></span>
                     <span>Code</span>
                   </a>
                 </span>
-                -->
+               
 
-                <!-- <span class="link-block">
+                <span class="link-block">
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon"><i class="ai ai-arxiv"></i></span>
                     <span>arXiv</span>
                   </a>
-                </span> -->
+                </span>
               </div>
             </div>
 
