--- a/index.html
+++ b/index.html
@@ -115,19 +115,18 @@
                   </a>
                 </span>
 
-                
                 <span class="link-block">
-                  <a href="https://github.com/YOUR REPO HERE" target="_blank" class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon"><i class="fab fa-github"></i></span>
-                    <span>Code</span>
+                  <a href="#" class="external-link button is-normal is-rounded is-dark" disabled>
+                    <span class="icon"><i class="fas fa-video"></i></span>
+                    <span>Video (TBD)</span>
                   </a>
                 </span>
                
 
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank" class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon"><i class="ai ai-arxiv"></i></span>
-                    <span>arXiv</span>
+                  <a href="#" class="external-link button is-normal is-rounded is-dark" disabled>
+                    <span class="icon"><i class="fas fa-file-alt"></i></span>
+                    <span>Poster (TBD)</span>
                   </a>
                 </span>
               </div>
